# sansin-core

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
sansin_core/: __init__.py  demo.py  engine.py  gate.py  priors.py  store.py
sansin_core/mcp/: __init__.py  cli.py  proxy.py
tests/: test_engine.py  test_gate.py  test_mcp_proxy.py
